[gd_scene load_steps=4 format=3 uid="uid://bn4m2tay0i6rj"]

[ext_resource type="Script" uid="uid://bdj0v3h5wdv6m" path="res://scripts/filterable_list.gd" id="1_cr32s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_by70f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cr32s"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.654232, 0.654232, 0.654232, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="FilterableList" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cr32s")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 288.0
offset_right = 1064.0
offset_bottom = 744.0
vertical_scroll_mode = 2

[node name="ItemList" type="ItemList" parent="ScrollContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_lock_ = true

[node name="FilterEdit" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 5.6
anchor_top = 4.2
anchor_right = 23.0
anchor_bottom = 6.65
offset_right = 8.0
offset_bottom = 8.0
theme_override_constants/caret_width = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_by70f")
theme_override_styles/focus = SubResource("StyleBoxFlat_cr32s")
scroll_fit_content_height = true
scroll_fit_content_width = true
caret_blink = true
caret_multiple = false
metadata/_edit_use_anchors_ = true

[node name="FilterLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 176.0
offset_right = 209.0
offset_bottom = 270.0
text = "Filter:"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 944.0
offset_top = 168.0
offset_right = 1056.0
offset_bottom = 270.0
text = "X"

[connection signal="item_selected" from="ScrollContainer/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="text_changed" from="FilterEdit" to="." method="_on_filter_edit_text_changed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
